# haskell-search-extension

./: .editorconfig  .gitignore  .prettierignore  README.md  build.ts  cabal.project  jest.config.js  jest.config.ts  manifest.json  manifest.jsonnet  manifest.libsonnet  package-lock.json  package.json  tsconfig.json
core/: README.md  cache.ts  compat.ts  omnibox.ts  query-event.ts  storage.ts  toast.ts  types.ts
core/command/: history.ts  open.ts  simple.ts
dist-chrome/: main.js  manifest.json
extension/: main.ts  types.ts  util.ts
extension/Omnibox/: Compat.ts  hackageData.ts  hackageRawData.ts  hoogle.ts  index.ts
extension/Omnibox/command/: default.ts  error.ts  extension.ts  hoogle.ts  link.ts  meta.ts  package.ts  type.ts  unify.ts
extension/Omnibox/data/error/: errorData.ts  errorRawData.ts
extension/Omnibox/data/extension/: extensionData.ts  extensionRawData.ts
extension/Omnibox/data/hackage/: hackageData.ts  hackageRawData.ts
extension/Omnibox/data/link/: linkData.ts  linkRawData.ts
extension/core/: cache.ts  compat.ts  omnibox.ts  query-event.ts  storage.ts  toast.ts  types.ts
extension/core/command/: base.ts  history.ts  open.ts  simple.ts
extension/data/: hackage.ts  hoogle.ts
extension/search/: hackage.ts
hse-data-generator/: CHANGELOG.md  fourmolu.yaml  hse-data-generator.cabal
hse-data-generator/data/: extension.txt  link.txt
hse-data-generator/exe/: Main.hs
hse-data-generator/exe/Generator/: Error.hs  Extension.hs  Flag.hs  Hackage.hs  Link.hs
hse-data-generator/exe/Hackage/: Generator.hs
hse-data-processer/: CHANGELOG.md  LICENSE  cabal-sha256  hse-data-processer.cabal  packages
hse-data-processer/exe/: Download.hs  Hoogle.hs  Main.hs  Processer.hs  Types.hs
tests/: common.test.ts  default.test.ts  error.test.ts  extension.test.ts  hoogle.test.ts  link.test.ts  meta.test.ts  omnibox.spec.ts  package.test.ts  unify.test.ts  util.ts
utils/: builder.ts
