cabal-version:   3.0
name:            hse-data-generator
version:         0.1.0.0

-- synopsis:
-- description:
license:         GPL-3.0-only
license-file:    LICENSE
author:          Lei Zhu
maintainer:      julytreee@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hse-data-generator
    import:           warnings
    main-is:          Main.hs
    other-modules:    Hackage.Generator

    -- other-extensions:
    build-depends:
        , base                ^>=4.18.2.0
        , conduit
        , crypton-connection
        , directory
        , extra
        , http-conduit
        , text

    hs-source-dirs:   exe
    default-language: GHC2021
