cabal-version: 3.0
name: hse-data-generator
version: 0.1.0.0
-- synopsis:
-- description:
license: GPL-3.0-only
license-file: LICENSE
author: Lei Zhu
maintainer: julytreee@gmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options:
    -Wall
    -Wno-name-shadowing

executable hse-data-generator
  import: warnings
  main-is: Main.hs
  other-modules:
    Generator.Error
    Generator.Extension
    Generator.Flag
    Generator.Hackage

  build-depends:
    aeson,
    base,
    bytestring,
    conduit,
    conduit-extra,
    containers,
    crypton-connection,
    data-default-class,
    directory,
    extra,
    filepath,
    html-conduit,
    http-conduit,
    syb,
    tar-conduit,
    text,
    unicode-show,
    utf8-string,
    xml-conduit,

  hs-source-dirs: exe
  default-language: GHC2021
